--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,14 @@
         android:theme="@style/AppTheme"
         android:name="app.DonationApp">
         <activity
+            android:name="app.Welcome"
+            android:label="@string/app_name" >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity
             android:name="app.Donate"
             android:label="@string/app_name">
             <intent-filter>
@@ -19,7 +27,7 @@
         </activity>
         <activity
             android:name="app.Report"
-            android:label="@string/donateTitle" >
+            android:label="@string/app_name" >
         </activity>
     </application>
 
