--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,6 +19,10 @@
             </intent-filter>
         </activity>
         <activity
+            android:name="app.Signup"
+            android:label="@string/app_name" >
+        </activity>
+        <activity
             android:name="app.Donate"
             android:label="@string/app_name">
             <intent-filter>
@@ -30,7 +34,5 @@
         <activity
             android:name="app.Report"
             android:label="@string/app_name" />
-        <activity android:name="app.Signup"></activity>
     </application>
-
 </manifest>
