--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,11 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="app.donation">
 
+    <!-- To auto-complete the email text field in the login form with the user's emails -->
+    <uses-permission android:name="android.permission.GET_ACCOUNTS" />
+    <uses-permission android:name="android.permission.READ_PROFILE" />
+    <uses-permission android:name="android.permission.READ_CONTACTS" />
+
     <application
         android:name="app.DonationApp"
         android:allowBackup="true"
@@ -20,7 +25,10 @@
         </activity>
         <activity
             android:name="app.Signup"
-            android:label="@string/app_name" >
+            android:label="@string/app_name" />
+        <activity
+            android:name="app.Login"
+            android:label="@string/title_activity_login" >
         </activity>
         <activity
             android:name="app.Donate"
@@ -34,5 +42,7 @@
         <activity
             android:name="app.Report"
             android:label="@string/app_name" />
+
     </application>
+
 </manifest>
