--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,14 +8,14 @@
     <uses-permission android:name="android.permission.READ_CONTACTS" />
 
     <application
-        android:name="app.DonationApp"
+        android:name="app.main.DonationApp"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name="app.Welcome"
+            android:name="app.activity.Welcome"
             android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -24,14 +24,14 @@
             </intent-filter>
         </activity>
         <activity
-            android:name="app.Signup"
+            android:name="app.activity.Signup"
             android:label="@string/app_name" />
         <activity
-            android:name="app.Login"
+            android:name="app.activity.Login"
             android:label="@string/title_activity_login" >
         </activity>
         <activity
-            android:name="app.Donate"
+            android:name="app.activity.Donate"
             android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -40,7 +40,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name="app.Report"
+            android:name="app.activity.Report"
             android:label="@string/app_name" />
 
     </application>
